number of moves and reset button added

--- a/src/Components/Styles.scss
+++ b/src/Components/Styles.scss
@@ -23,3 +23,11 @@
 .greeno{
     color: green;
 }
+.newGame{
+    &.active{
+        background-color: orange;
+    }
+}
+.startGame{
+    color: #ff00ff;
+}
